@@ -3,8 +3,9 @@ transmission-remote-gtk (1.5.1-1.1) UNRELEASED; urgency=medium
   * Enable libappindicator support using libayatana-appindicator3-dev,
     which is license compatible
   * Simplify uscan support file
+  * Update patches, context/format only
 
- -- Barak A. Pearlmutter <bap@debian.org>  Tue, 05 Nov 2024 13:48:06 +0000
+ -- Barak A. Pearlmutter <bap@debian.org>  Tue, 05 Nov 2024 13:53:51 +0000
 
 transmission-remote-gtk (1.5.1-1) unstable; urgency=medium
 
